--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<body>
 	<div id="divlogo">	<img id="logo" src= "file:/D:/Yummyimg/logo.png"width="200"></div>
 
-  <div id="iconosredesx"><img class="iconosredes" src=file:/D:/Yummyimg/RSfacebook.png><img class="iconosredes" src=file:/D:/Yummyimg/RStwitter.png ><img class="iconosredes" src=file:/D:/Yummyimg/RSinstagram.png "><img class="iconosredes"src=file:/D:/Yummyimg/RSwhatsapp.png >   </div>
+  <div id="iconosredesx"><img class="iconosredes" src=file:/D:/Yummyimg/RSfacebook.png><img class="iconosredes" src=https://drive.google.com/uc?id=1RsW2tl_YjaXNB61RHmhm-TqCFaFxgD8S ><img class="iconosredes" src=file:/D:/Yummyimg/RSinstagram.png "><img class="iconosredes"src=file:/D:/Yummyimg/RSwhatsapp.png >   </div>
 
   <form id="frmbuscar" action=""><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input id="submitbuscar" type="image" value="Ir" src="file:/D:/Yummyimg/magnifier.png" align="right"></form>
 
