--- a/index.html
+++ b/index.html
@@ -1,108 +1,155 @@
 <!doctype html>
-<html>
-  <head>
-		<meta charset="utf-8"
-	</head>
-	<style>
-  #test{
-    color:transparent;
-    position: absolute;
-    top:300px;
-  }
-    #frmbuscar{
+<html lang="es">
+
+<head>
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+  <base href="file:/C:/Yummyimg/">
+  <title>Donas - Yummy Cake</title>
+  <style>
+    #test {
+      color: transparent;
       position: absolute;
-      top:40px;
-      left:300px;
-      width:200px;
-    height: 40px;
+      top: 300px;
+    }
+
+    #frmbuscar {
+      position: absolute;
+      top: 5vh;
+      left: 23vw;
+      width: 15vw;
+      height: 6vw;
 
     }
-    .iconosredes{
-      width: 39px;
-      padding-right: 15px;
+
+    .iconosredes {
+      width: 2.7vw;
+      padding-right: 1vw;
     }
-    #iconosredesx{
+
+    #iconosredesx {
       position: absolute;
-      top:40px;
-      right:50px;}
-/* Add a black background color to the top navigation */
+      top: 5vh;
+      right: 4vw;
+    }
+
+    /* Add a black background color to the top navigation */
     .topnav {
       background-color: #ff6961;
       overflow: hidden;
       text-align: center;
       position: absolute;
-      top:95px;
-    }                                                         
+      top: 13.5vh;
+    }
+
     .topnav a {
       float: left;
       color: black;
       text-align: center;
-      padding: 10px 74px;
+      padding: 1.3vh 5.3vw;
       text-decoration: none;
-      font-size: 17px;
-    }
-    #inputbuscar{
-      width:350%;
-      height:25px;
+      font-size: 1.23vw;
     }
 
-    h1{
+    #inputbuscar {
+      width: 350%;
+      height: 4vh;
+
+    }
+
+    h1 {
       position: absolute;
       width: 100px;
       margin-left: -50px;
-      left:50%;
-      top:140px;
+      left: 50%;
+      top: 17vh;
       font-size: 3em;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 
-    
+
     .topnav a:hover {
       background-color: #ddd;
       color: black;
     }
+
     .topnav a.active {
       background-color: #ddd;
       color: black;
       border: 1px ridge black;
       text-decoration: underline;
     }
-    #divlogo {
-		  position: absolute;
-      left:20px;
-      top:0px;
-    }
-    #submitbuscar{
-      position: absolute;
-      height:26px;
-      margin-left:-35px;
-      top:3px;
 
+    #divlogo {
+      position: absolute;
+      left: 1.2vw;
+      top: 0.1vh;
+    }
+
+    #submitbuscar {
+      position: absolute;
+      height: 4vh;
+      margin-left: -2.5vw;
+      top: 0.6vh;
+
+    }
+
+    #logo {
+      width: 14.7vw;
     }
 
     body {
-		  background: rgb(255,205,155);
+      background: rgb(255, 205, 155);
     }
 
-	</style>
-	<body>
-	<div id="divlogo">	<img id="logo" src= "file:/D:/Yummyimg/logo.png"width="200"></div>
+    .divdona {
+      width: 35vw;
+      height: 17.5vw;
+      background: #ff9861;
+      position: absolute;
+      top: 37vh;
+    }
 
-  <div id="iconosredesx"><img class="iconosredes" src=file:/D:/Yummyimg/RSfacebook.png><img class="iconosredes" src=https://doc-00-4g-"docs.googleusercontent.com/docs/securesc/84nm4eolpdl89jdpk4pmddi9tvms9fdc/j1ont4a3mn0kbb3lt3m3u15e1tis9pu4/1553522400000/15674392842798740299/15674392842798740299/1RsW2tl_YjaXNB61RHmhm-TqCFaFxgD8S" ><img class="iconosredes" src=file:/D:/Yummyimg/RSinstagram.png "><img class="iconosredes"src=file:/D:/Yummyimg/RSwhatsapp.png >   </div>
+    .imgdona {
+      height: 100%;
+      position: absolute;
+    }
 
-  <form id="frmbuscar" action=""><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input id="submitbuscar" type="image" value="Ir" src="file:/D:/Yummyimg/magnifier.png" align="right"></form>
+    .txtdona {
+      font-size: 1.8vw;
+      margin-left: 17.5vw;
+      float: right;
+      text-align: center;
+    }
+  </style>
+</head>
 
-	 <div class="topnav">
-  <a class="active" href="#minicio">Inicio</a>
-  <a href="#mmenu">Menú</a>
-  <a href="#morden">Orden en línea</a>
-  <a href="#mcontacto">Contacto</a>
-  <a href="#quienes">Quiénes somos</a>
-  <a href="#mpersonalizados">Personalizados</a>
-</div> 
+<body>
+  <div id="divlogo"> <img id="logo" src="logo.png" alt="YUMMY CAKE"></div>
 
-<p id="test">Hola me llamo marco</p> 
+  <div id="iconosredesx"><img alt="FB" class="iconosredes" src=RSfacebook.png><img alt="TW" class="iconosredes"
+      src=RStwitter.png><img alt="IG" class="iconosredes" src="RSinstagram.png "><img alt="WA" class="iconosredes"
+      src=RSwhatsapp.png> </div>
 
-<h1>Donas</h1>
+  <form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
+      id="submitbuscar" type="image" src="magnifier.png" alt="Ir"></form>
+
+  <div class="topnav">
+    <a class="active" href="#minicio">Inicio</a>
+    <a href="#mmenu">Menú</a>
+    <a href="#morden">Orden en línea</a>
+    <a href="#mcontacto">Contacto</a>
+    <a href="#quienes">Quiénes somos</a>
+    <a href="#mpersonalizados">Personalizados</a>
+  </div>
+
+  <p id="test">Hola me llamo marco</p>
+
+  <div class="divdona"> <img class="imgdona" src="donablanca.png" alt="Dona Blanca">
+    <p class="txtdona">Dona con glaseado blanco y granillo de azúcar de colores</p>
+  </div>
+  <h1>Donas</h1>
 
 </body>
+
 </html>
