--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <base href="file:/C:/Yummyimg/">
+  <base href="https://drive.google.com/uc?export=view&id="
+
+>
   <title>Donas - Yummy Cake</title>
   <style>
     #frmbuscar {
@@ -147,7 +149,7 @@
   <div id="divlogo"> <img id="logo" src="logo.png" alt="YUMMY CAKE"></div>
 
   <div id="iconosredesx"><a href="https://www.facebook.com"><img alt="FB" class="iconosredes" src=RSfacebook.png></a><a
-      href="https://www.twitter.com"><img alt="TW" class="iconosredes" src=RStwitter.png></a><a
+      href="https://www.twitter.com"><img alt="TW" class="iconosredes" src=1xPE8EjMLgrLouGbkwSWP6riizVhn1Iwh></a><a
       href="https://www.instagram.com"><img alt="IG" class="iconosredes" src="RSinstagram.png "></a><a
       href="https://www.whatsapp.com"><img alt="WA" class="iconosredes" src=RSwhatsapp.png></a> </div>
 
