--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <base href="https://drive.google.com/uc?export=view&id="
-
->
+  <base href="file:/G:/Yummyimg/">
   <title>Donas - Yummy Cake</title>
   <style>
     #frmbuscar {
@@ -91,7 +89,7 @@
     }
 
     #logo {
-      width: 14.7vw;
+      width: 13.3vw;
     }
 
     body {
@@ -142,19 +140,20 @@
       width: 25%;
       background-color: bisque !important;
     }
+    
   </style>
 </head>
 
 <body>
   <div id="divlogo"> <img id="logo" src="logo.png" alt="YUMMY CAKE"></div>
 
-  <div id="iconosredesx"><a href="https://www.facebook.com"><img alt="FB" class="iconosredes" src=RSfacebook.png></a><a
-      href="https://www.twitter.com"><img alt="TW" class="iconosredes" src=1xPE8EjMLgrLouGbkwSWP6riizVhn1Iwh></a><a
-      href="https://www.instagram.com"><img alt="IG" class="iconosredes" src="RSinstagram.png "></a><a
-      href="https://www.whatsapp.com"><img alt="WA" class="iconosredes" src=RSwhatsapp.png></a> </div>
+  <div id="iconosredesx"><a href="https://www.facebook.com"><img alt="FB" class="iconosredes" src=https://gdurl.com/6U48></a><a
+      href="https://www.twitter.com"><img alt="TW" class="iconosredes" src=https://gdurl.com/6Q4q></a><a
+      href="https://www.instagram.com"><img alt="IG" class="iconosredes" src="https://gdurl.com/YI-R"></a><a
+      href="https://www.whatsapp.com"><img alt="WA" class="iconosredes" src=https://gdurl.com/0pGw></a> </div>
 
   <form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
-      id="submitbuscar" type="image" src="magnifier.png" alt="Ir"></form>
+      id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 
   <div class="topnav">
     <a  href="#minicio">Inicio</a>
@@ -187,6 +186,7 @@
     </div>
   </div>
   <h1>Donas</h1>
+
 
 </body>
 
