--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <base href="file:/G:/Yummyimg/">
   <title>Donas - Yummy Cake</title>
   <style>
     #frmbuscar {
@@ -145,7 +144,7 @@
 </head>
 
 <body>
-  <div id="divlogo"> <img id="logo" src="logo.png" alt="YUMMY CAKE"></div>
+  <div id="divlogo"> <img id="logo" src="https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
 
   <div id="iconosredesx"><a href="https://www.facebook.com"><img alt="FB" class="iconosredes" src=https://gdurl.com/6U48></a><a
       href="https://www.twitter.com"><img alt="TW" class="iconosredes" src=https://gdurl.com/6Q4q></a><a
@@ -161,23 +160,23 @@
     <a href="#morden">Orden en línea</a>
     <a href="#mcontacto">Contacto</a>
     <a href="#quienes">Quiénes somos</a>
-    <a href="#mpersonalizados">Personalizados</a>
+    <a href="ProcederPago.html">Personalizados</a>
   </div>
 
 
   <div id="flexcont">
-    <div class="divdona"> <img class="imgdona" src="donablanca.png" alt="Dona Blanca">
+    <div class="divdona"> <img class="imgdona" src="https://gdurl.com/to1h" alt="Dona Blanca">
       <p class="txtdona">Dona con glaseado blanco y granillo de azúcar de colores<br><br> <span
           class="precio">$900</span></p>
       <form><input type="number" name="Precio" class="stepprecio" step="1"><input type="submit" value="Agregar"> </form>
     </div>
-    <div class="divdona" id="dona2"> <img class="imgdona" src="donanegra.png" alt="Dona Negra">
+    <div class="divdona" id="dona2"> <img class="imgdona" src="https://gdurl.com/QlmA" alt="Dona Negra">
       <form><input type="number" name="Precio2" class="stepprecio" step="1"><input type="submit" value="Agregar">
       </form>
       <p class="txtdona">Dona con glaseado de chocolate y granillo de azúcar de colores<br><br> <span
           class="precio">$900</span></p>
     </div>
-    <div class="divdona" id="dona3"> <img class="imgdona" src="donarosa.png" alt="Dona Rosa">
+    <div class="divdona" id="dona3"> <img class="imgdona" src="https://gdurl.com/Z3mf" alt="Dona Rosa">
       <p class="txtdona">Dona con glaseado de fresa y granillo de azúcar de colores<br><br> <span
           class="precio">$900</span></p>
       <form><input type="number" name="Precio3" class="stepprecio" step="1"><input type="submit" value="Agregar">
