--- a/CompletarDatosDeEntrega.html
+++ b/CompletarDatosDeEntrega.html
@@ -16,9 +16,7 @@
 			#divlogo{
 				text-align: center;
 			}
-			#divEstr{
-				text-align: center;
-			}
+
 			#EntreOrden{
 				text-align: center;
 				color: gray;
@@ -47,13 +45,14 @@
 				id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 		<div class="topnav">
 			<a class="active" href="#inicio">Inicio</a>
-			<a href="#mmenu">Menú</a>
-			<a href="#morden">Orden en linea</a>
+			<a href="yumdonas.html">Productos</a>
+			<a href="ProcederPago.html">Orden en linea</a>
 			<a href="#mcontacto">Contacto</a>
-			<a href="#quienes">Quiénes somos</a>
-			<a href="#mpersonalizados">Personalizados</a>
+			<a href="pantalla_nosotros.html">Quiénes somos</a>
+			<a href="yumpasteles.html">Personalizados</a>
 		</div>
 		<div id="divlogo">	<img id="logo" src= "https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
+		<div id="fcont">
 		<h1>Orden en linea</h1>
 		<br>
 		<h2 id="EntreOrden">¿Donde Entregaremos tu orden?</h2>
@@ -66,8 +65,6 @@
 		<center> 
 			<input id="BotonComplePag" type="button" value="Completar Datos de Entrega">
 		</center>
-		<div id="divEstr">
-			<img alt="" id="Estrella" src= "file:/D:/Yummyimg/estrellas.gif" width="1250" height="45">
-		</div>
+	</div>
 	</body>
 </html>
