--- a/CompletarDatosDePago.html
+++ b/CompletarDatosDePago.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="https://raw.githack.com/yummy-cake/yummy-cake.github.io/master/barra.css">
 		<title>Completar Datos de Pago</title>
 		<style>
+
 			body{
 				background: rgb(255,205,155);
 			}
@@ -16,9 +17,7 @@
 			#divlogo{
 				text-align: center;
 			}
-			#divEstr{
-				text-align: center;
-			}
+
 			#DatEntrega{
 				background-color: #cf2a27;
 				text-align: center;
@@ -31,7 +30,7 @@
 				width: 600px; 
 			}
 
-			}
+			
 		</style>
 	</head>
 	
@@ -44,16 +43,17 @@
 			<form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
 				id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 		<div class="topnav">
-			<a class="active" href="#inicio">Inicio</a>
-			<a href="#mmenu">Menú</a>
-			<a href="#morden">Orden en linea</a>
+			<a  href="#inicio">Inicio</a>
+			<a href="yumdonas.html">Productos</a>
+			<a class="active" href="ProcederPago.html">Orden en linea</a>
 			<a href="#mcontacto">Contacto</a>
-			<a href="#quienes">Quiénes somos</a>
-			<a href="#mpersonalizados">Personalizados</a>
+			<a href="pantalla_nosotros.html">Quiénes somos</a>
+			<a href="yumpasteles.html">Personalizados</a>
 		</div>
 		<div id="divlogo">	<img id="logo" src= "https://gdurl.com/rUCA" width="200" alt="YUMMY CAKE"></div>
+<div id="fcont">
 		<h1>Orden en linea</h1>
-<div id="todotodo">
+
 		<div class="Texto">
 			<center>
 				<button  id="Boton1" style="margin: 10px">Efectivo</button><br>
@@ -62,9 +62,7 @@
 			</center>
 		</div>
 		<h3 id="DatEntrega">El repartidor no lleva mas de $200 de cambio></h3>
-		<div id="divEstr">
-			<img alt="" id="Estrella" src= "file:/D:/Yummyimg/estrellas.gif" width="1250" height="45">
-		</div>
+
 	</div>
 	</body>
 </html>
