--- a/ProcederPago.html
+++ b/ProcederPago.html
@@ -28,31 +28,7 @@
 				font-size: 2em;
 				margin-left: 20px;
 			}
-			.topnav{
-				background-color: #ff6961;
-				overflow: hidden;
-				text-align: center;
-				position: absolute;
-				top: 110px;
-			}
-			.topnav a{
-				float: left;
-				color: black;
-				text-align: center;
-				padding: 13px 74px;
-				text-decoration: none;
-				font-size: 17px;
-			}
-			.topnav a:hover{
-				background-color: #ddd;
-				color: black;
-			}
-			.topnav a.active{
-				background-color: #ddd;
-				color: black;
-				border: 1px ridge black;
-				text-decoration: underline;
-			}
+
 		</style>
 	</head>
 	
@@ -65,14 +41,16 @@
 			<form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
 				id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 		<div class="topnav">
-			<a class="active" href="#inicio">Inicio</a>
-			<a href="#mmenu">Menú</a>
-			<a href="#morden">Orden en linea</a>
+			<a  href="#inicio">Inicio</a>
+			<a href="yumdonas.html">Productos</a>
+			<a class="active" href="ProcederPago.html">Orden en linea</a>
 			<a href="#mcontacto">Contacto</a>
-			<a href="#quienes">Quiénes somos</a>
-			<a href="#mpersonalizados">Personalizados</a>
+			<a href="pantalla_nosotros.html">Quiénes somos</a>
+			<a href="yumpasteles.html">Personalizados</a>
 		</div>
 		<div id="divlogo">	<img id="logo" src= "https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
+		<div id="fcont">
+
 		<h1>Orden en linea</h1>
 		<p class="Texto">
 			Correo electronico <br>
@@ -82,13 +60,11 @@
 			Apellidos <br>
 			<input type="text" name="nombredelacaja"><br>
 			Telefono/Movil <br>
-			<input type="range"><br>
+			<input type="number"><br>
 		</p >
 		<center> 
 			<input id="BotonComple" type="button" value="Completar Datos de Entrega">
 		</center>
-		<div id="divEstr">
-			<img id="Estrella" src= "file:/D:/Yummyimg/estrellas.gif" width="1250" height="45" alt="">
 		</div>
 	</body>
 </html>
