--- a/detalledona.html
+++ b/detalledona.html
@@ -3,48 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://raw.githack.com/yummy-cake/yummy-cake.github.io/master/barra.css">
-		<title>Detalle Dona - Yummy Cake</title>
+		<title>Detalle Dona #1 - Yummy Cake</title>
 		<style>
-			/* Add a black background color to the top navigation */
-		.topnav {
-		  background-color: #ff6961;
-		  overflow: hidden;
-		  text-align: center;
-		  position: absolute;
-		  top:110px;
 		
-		}
-		
-		/* Style the links inside the navigation bar */
-		.topnav a {
-		  float: left;
-		  color: black;
-		  text-align: center;
-		  padding: 13px 74px;
-		  text-decoration: none;
-		  font-size: 17px;
-		
-		
-		}
-		
-		.topnav a:hover {
-		  background-color: #ddd;
-		  color: black;
-		}
-		
-		.topnav a.active {
-		  background-color: #ddd;
-		  color: black;
-		  border: 1px ridge black;
-		  text-decoration: underline;
-		}
-			#divlogo {
-		
-				margin-left: -100px;
-				left:50%;
-				position:absolute;
-				
-			}
+
 			body {
 				background: rgb(255,205,155);
 			}
@@ -121,14 +83,16 @@
 				id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 	<div id="divlogo">	<img id="logo" src= "https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
 	 <div class="topnav">
-  <a class="active" href="#minicio">Inicio</a>
-  <a href="#mmenu">Menú</a>
-  <a href="#morden">Orden en línea</a>
+  <a href="menuprods.html">Inicio</a>
+  <a class="active" href="yumdonas.html">Productos</a>
+  <a href="ProcederPago.html">Orden en línea</a>
   <a href="#mcontacto">Contacto</a>
-  <a href="#quienes">Quiénes somos</a>
-  <a href="#mpersonalizados">Personalizados</a>
+  <a href="pantalla_nosotros.html">Quiénes somos</a>
+  <a href="yumpasteles.html">Personalizados</a>
 </div> 
-<div id="imagendonas"><img id="imagenimagendonas" src= "file:/D:/Yummyimg/donablanca.png" width="350" alt="Donas"></div>
+<div id="fcont">
+
+<div id="imagendonas"><img id="imagenimagendonas" src= "https://gdurl.com/to1h" width="350" alt="Donas"></div>
 	<div id="details"> <h2>Detalles</h2>
 	<p> Dona glaseada, Cantidad por 100 gramos <br>
 	Calorías 452<br>
@@ -144,4 +108,6 @@
 <button type="button" id="btnAgregar">Agregar Más</button>
 <button type="button" id="btnAgregar2">Proceder Al Pago</button>
 <p id="letras">2019 by YUMMY CAKE™® . All Rights Reserved.</p>
+</div>
+</body>
 </html>
