--- a/index.html
+++ b/index.html
@@ -1,192 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-
-<head>
-  <meta charset="utf-8">
-  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <title>Donas - Yummy Cake</title>
-  <style>
-    #frmbuscar {
-      position: absolute;
-      top: 5vh;
-      left: 23vw;
-      width: 15vw;
-      height: 6vw;
-
-    }
-
-    .iconosredes {
-      width: 2.7vw;
-      padding-right: 1vw;
-    }
-
-    #iconosredesx {
-      position: absolute;
-      top: 5vh;
-      right: 4vw;
-    }
-
-    /* Add a black background color to the top navigation */
-    .topnav {
-      background-color: #ff6961;
-      overflow: hidden;
-      text-align: center;
-      position: absolute;
-      top: 13.5vh;
-    }
-
-    .topnav a {
-      float: left;
-      color: black;
-      text-align: center;
-      padding: 1.3vh 5.25vw;
-      text-decoration: none;
-      font-size: 1.23vw;
-    }
-
-    #inputbuscar {
-      width: 350%;
-      height: 4vh;
-
-    }
-
-    h1 {
-      position: absolute;
-      width: 100px;
-      margin-left: -50px;
-      left: 48%;
-      top: 17vh;
-      font-size: 3em;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    }
+  <head>
+    <meta charset="UTF-8">
+    <title>Índice</title>
+    <style>
+        p{
+            font-size: 20px;
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+        }
+        #fuerzaimparablevsobjetoinamovible{
+            color: red;
+            text-decoration: none;
+            font-size: 3em;
+        }
+        a{
+            font-size: 1.7em;
+        }
 
 
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
+    </style>
+  </head>
+  <body>
+      <h2>Índice etapa de desarrollo</h2>
+    <p>Este índice sirve como herramienta para demostrar las pantallas individuales, ya que en esta etapa puede haber algunos errores en el direccionamiento a cada página. <br>
+        El siguiente enlace lo direccionará a la pantalla principal, y más abajo se encuentran todas las demás pantallas.
+       <br> Por su comprensión, gracias.
+       <br> - Yummy Cake
+    </p>
+    <a href="menuprods.html"><h1 id="fuerzaimparablevsobjetoinamovible">Ir a la página principal</h1></a><br>
+    <a href="CompletarDatosDeEntrega.html">Completar datos de entrega</a><br>
+    <a href="CompletarDatosDePago.html">Completar datos de pago</a><br>
+    <a href="detalledona.html">Detalles del producto</a><br>
+    <a href="ordenenlinea.html">Método de pago #1</a><br>
+    <a href="pantalla_nosotros.html">Quiénes somos</a><br>
+    <a href="ProcederPago.html">Proceder al pago</a><br>
+    <a href="yumdonas.html">Productos - Donas</a><br>
+    <a href="yumpasteles.html">Productos - Pasteles</a><br>
 
-    .topnav a.active {
-      background-color: #ddd;
-      color: black;
-      border: 1px ridge black;
-      text-decoration: underline;
-    }
-
-    #divlogo {
-      position: absolute;
-      left: 1.2vw;
-      top: 0.1vh;
-    }
-
-    #submitbuscar {
-      position: absolute;
-      height: 4vh;
-      margin-left: -2.5vw;
-      top: 0.6vh;
-
-    }
-
-    #logo {
-      width: 13.3vw;
-    }
-
-    body {
-      background: rgb(255, 205, 155);
-    }
-
-
-    .divdona {
-      width: 40vw;
-      height: 20vw;
-      background: #ff9861;
-      position: absolute;
-      top: 37vh;
-      margin-left: 4vw;
-    }
-
-    .divdona form {
-      position: absolute;
-      left: 65%;
-      bottom: 20%;
-    }
-
-    .divdona form input {
-      background-color: #ff6961;
-    }
-
-    .imgdona {
-      height: 100%;
-      position: absolute;
-    }
-
-    .txtdona {
-      font-size: 1.8vw;
-      margin-left: 20vw;
-      float: right;
-      text-align: center;
-    }
-
-    #dona2 {
-      left: 50vw;
-    }
-
-    #dona3 {
-      top: 80vh;
-    }
-
-    .stepprecio {
-      width: 25%;
-      background-color: bisque !important;
-    }
-    
-  </style>
-</head>
-
-<body>
-  <div id="divlogo"> <img id="logo" src="https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
-
-  <div id="iconosredesx"><a href="https://www.facebook.com"><img alt="FB" class="iconosredes" src=https://gdurl.com/6U48></a><a
-      href="https://www.twitter.com"><img alt="TW" class="iconosredes" src=https://gdurl.com/6Q4q></a><a
-      href="https://www.instagram.com"><img alt="IG" class="iconosredes" src="https://gdurl.com/YI-R"></a><a
-      href="https://www.whatsapp.com"><img alt="WA" class="iconosredes" src=https://gdurl.com/0pGw></a> </div>
-
-  <form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
-      id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
-
-  <div class="topnav">
-    <a  href="#minicio">Inicio</a>
-    <a class="active" href="#mprod">Productos</a>
-    <a href="#morden">Orden en línea</a>
-    <a href="#mcontacto">Contacto</a>
-    <a href="#quienes">Quiénes somos</a>
-    <a href="ProcederPago.html">Personalizados</a>
-  </div>
-
-
-  <div id="flexcont">
-    <div class="divdona"> <img class="imgdona" src="https://gdurl.com/to1h" alt="Dona Blanca">
-      <p class="txtdona">Dona con glaseado blanco y granillo de azúcar de colores<br><br> <span
-          class="precio">$900</span></p>
-      <form><input type="number" name="Precio" class="stepprecio" step="1"><input type="submit" value="Agregar"> </form>
-    </div>
-    <div class="divdona" id="dona2"> <img class="imgdona" src="https://gdurl.com/QlmA" alt="Dona Negra">
-      <form><input type="number" name="Precio2" class="stepprecio" step="1"><input type="submit" value="Agregar">
-      </form>
-      <p class="txtdona">Dona con glaseado de chocolate y granillo de azúcar de colores<br><br> <span
-          class="precio">$900</span></p>
-    </div>
-    <div class="divdona" id="dona3"> <img class="imgdona" src="https://gdurl.com/Z3mf" alt="Dona Rosa">
-      <p class="txtdona">Dona con glaseado de fresa y granillo de azúcar de colores<br><br> <span
-          class="precio">$900</span></p>
-      <form><input type="number" name="Precio3" class="stepprecio" step="1"><input type="submit" value="Agregar">
-      </form>
-
-    </div>
-  </div>
-  <h1>Donas</h1>
-
-
-</body>
-
+  </body>
 </html>
