--- a/ordenenlinea.html
+++ b/ordenenlinea.html
@@ -5,33 +5,7 @@
     <link rel="stylesheet" href="https://raw.githack.com/yummy-cake/yummy-cake.github.io/master/barra.css">
     <title>Orden en línea - Yummy Cake</title>
     <style>
-      /* Add a black background color to the top navigation */
-    .topnav {
-      background-color: #ff6961;
-      overflow: hidden;
-      text-align: center;
-      position: absolute;
-      top:110px;
-    }
-    /* Style the links inside the navigation bar */
-    .topnav a {
-      float: left;
-      color: black;
-      text-align: center;
-      padding: 13px 74px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-    .topnav a.active {
-      background-color: #ddd;
-      color: black;
-      border: 1px ridge black;
-      text-decoration: underline;
-    }
+
     body {
         background: rgb(255,205,155);
       }
@@ -81,13 +55,15 @@
       id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 	<div id="divlogo">	<img id="logo" src= "https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
 	 <div class="topnav">
-  <a class="active" href="#minicio">Inicio</a>
-  <a href="#mmenu">Menú</a>
-  <a href="#morden">Orden en línea</a>
+  <a  href="menuprods.html">Inicio</a>
+  <a href="yumdonas.html">Productos</a>
+  <a class="active" href="ProcederPago.html">Orden en línea</a>
   <a href="#mcontacto">Contacto</a>
-  <a href="#quienes">Quiénes somos</a>
-  <a href="#mpersonalizados">Personalizados</a>
+  <a href="pantalla_nosotros.html">Quiénes somos</a>
+  <a href="yumpasteles.html">Personalizados</a>
 </div>
+<div id="fcont">
+
 <h1 id="tema">Orden En Linea</h1>
 <p class="ola">
   Numero De Tarjeta<br>
@@ -99,4 +75,6 @@ Nombre Del Titular<br>
    <button type="button" id="btncompra">Realizar Compra</button>
 </p>
 <p id="letras">2019 by YUMMY CAKE™® . All Rights Reserved.</p>
+</div>
 </body>
+</html>
