--- a/yumdonas.html
+++ b/yumdonas.html
@@ -2,165 +2,190 @@
 <html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <base href="file:/C:/Yummyimg/">
-    <title>Donas - Yummy Cake</title>
-    <style>
-        #test {
-            color: transparent;
-            position: absolute;
-            top: 300px;
-        }
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+  <title>Donas - Yummy Cake</title>
+  <style>
+    #frmbuscar {
+      position: absolute;
+      top: 5vh;
+      left: 23vw;
+      width: 15vw;
+      height: 6vw;
 
-        #frmbuscar {
-            position: absolute;
-            top: 5vh;
-            left: 23vw;
-            width: 15vw;
-            height: 6vw;
+    }
 
-        }
+    .iconosredes {
+      width: 2.7vw;
+      padding-right: 1vw;
+    }
 
-        .iconosredes {
-            width: 2.7vw;
-            padding-right: 1vw;
-        }
+    #iconosredesx {
+      position: absolute;
+      top: 5vh;
+      right: 4vw;
+    }
 
-        #iconosredesx {
-            position: absolute;
-            top: 5vh;
-            right: 4vw;
-        }
+    /* Add a black background color to the top navigation */
+    .topnav {
+      background-color: #ff6961;
+      overflow: hidden;
+      text-align: center;
+      position: absolute;
+      top: 13.5vh;
+    }
 
-        /* Add a black background color to the top navigation */
-        .topnav {
-            background-color: #ff6961;
-            overflow: hidden;
-            text-align: center;
-            position: absolute;
-            top: 13.5vh;
-        }
+    .topnav a {
+      float: left;
+      color: black;
+      text-align: center;
+      padding: 1.3vh 5.25vw;
+      text-decoration: none;
+      font-size: 1.23vw;
+    }
 
-        .topnav a {
-            float: left;
-            color: black;
-            text-align: center;
-            padding: 1.3vh 5.3vw;
-            text-decoration: none;
-            font-size: 1.23vw;
-        }
+    #inputbuscar {
+      width: 350%;
+      height: 4vh;
 
-        #inputbuscar {
-            width: 350%;
-            height: 4vh;
+    }
 
-        }
-
-        h1 {
-            position: absolute;
-            width: 100px;
-            margin-left: -50px;
-            left: 50%;
-            top: 17vh;
-            font-size: 3em;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        }
+    h1 {
+      position: absolute;
+      width: 100px;
+      margin-left: -50px;
+      left: 48%;
+      top: 17vh;
+      font-size: 3em;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
 
 
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
 
-        .topnav a.active {
-            background-color: #ddd;
-            color: black;
-            border: 1px ridge black;
-            text-decoration: underline;
-        }
+    .topnav a.active {
+      background-color: #ddd;
+      color: black;
+      border: 1px ridge black;
+      text-decoration: underline;
+    }
 
-        #divlogo {
-            position: absolute;
-            left: 1.2vw;
-            top: 0.1vh;
-        }
+    #divlogo {
+      position: absolute;
+      left: 1.2vw;
+      top: 0.1vh;
+    }
 
-        #submitbuscar {
-            position: absolute;
-            height: 4vh;
-            margin-left: -2.5vw;
-            top: 0.6vh;
+    #submitbuscar {
+      position: absolute;
+      height: 4vh;
+      margin-left: -2.5vw;
+      top: 0.6vh;
 
-        }
+    }
 
-        #logo {
-            width: 14.7vw;
-        }
+    #logo {
+      width: 13.3vw;
+    }
 
-        body {
-            background: rgb(255, 205, 155);
-        }
-        #flexcont{
-            display: flex;
-            justify-content: space-around;
-        }
+    body {
+      background: rgb(255, 205, 155);
+    }
 
-        .divdona {
-            width: 40vw;
-            height: 20vw;
-            background: #ff9861;
-            position: absolute;
-            top: 37vh;
-        }
 
-        .imgdona {
-            height: 100%;
-            position: absolute;
-        }
+    .divdona {
+      width: 40vw;
+      height: 20vw;
+      background: #ff9861;
+      position: absolute;
+      top: 37vh;
+      margin-left: 4vw;
+    }
 
-        .txtdona {
-            font-size: 1.8vw;
-            margin-left: 20vw;
-            float: right;
-            text-align: center;
-        }
-    </style>
+    .divdona form {
+      position: absolute;
+      left: 65%;
+      bottom: 20%;
+    }
+
+    .divdona form input {
+      background-color: #ff6961;
+    }
+
+    .imgdona {
+      height: 100%;
+      position: absolute;
+    }
+
+    .txtdona {
+      font-size: 1.8vw;
+      margin-left: 20vw;
+      float: right;
+      text-align: center;
+    }
+
+    #dona2 {
+      left: 50vw;
+    }
+
+    #dona3 {
+      top: 80vh;
+    }
+
+    .stepprecio {
+      width: 25%;
+      background-color: bisque !important;
+    }
+    
+  </style>
 </head>
 
 <body>
-    <div id="divlogo"> <img id="logo" src="logo.png" alt="YUMMY CAKE"></div>
+  <div id="divlogo"> <img id="logo" src="https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
 
-    <div id="iconosredesx"><img alt="FB" class="iconosredes" src=RSfacebook.png><img alt="TW" class="iconosredes"
-            src=RStwitter.png><img alt="IG" class="iconosredes" src="RSinstagram.png "><img alt="WA" class="iconosredes"
-            src=RSwhatsapp.png> </div>
+  <div id="iconosredesx"><a href="https://www.facebook.com"><img alt="FB" class="iconosredes" src=https://gdurl.com/6U48></a><a
+      href="https://www.twitter.com"><img alt="TW" class="iconosredes" src=https://gdurl.com/6Q4q></a><a
+      href="https://www.instagram.com"><img alt="IG" class="iconosredes" src="https://gdurl.com/YI-R"></a><a
+      href="https://www.whatsapp.com"><img alt="WA" class="iconosredes" src=https://gdurl.com/0pGw></a> </div>
 
-    <form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
-            id="submitbuscar" type="image" src="magnifier.png" alt="Ir"></form>
+  <form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
+      id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 
-    <div class="topnav">
-        <a href="#minicio">Inicio</a>
-        <a class="active" href="#mmenu">Menú</a>
-        <a href="#morden">Orden en línea</a>
-        <a href="#mcontacto">Contacto</a>
-        <a href="#quienes">Quiénes somos</a>
-        <a href="#mpersonalizados">Personalizados</a>
+  <div class="topnav">
+    <a  href="menuprods.html">Inicio</a>
+    <a class="active" href="yumdonas.html">Productos</a>
+    <a href="ProcederPago.html">Orden en línea</a>
+    <a href="#mcontacto">Contacto</a>
+    <a href="pantalla_nosotros.html">Quiénes somos</a>
+    <a href="yumpasteles.html">Personalizados</a>
+  </div>
+
+
+  <div id="flexcont">
+    <div class="divdona"> <img class="imgdona" src="https://gdurl.com/to1h" alt="Dona Blanca">
+      <p class="txtdona">Dona con glaseado blanco y granillo de azúcar de colores<br><br> <span
+          class="precio">$900</span></p>
+      <form><input type="number" name="Precio" class="stepprecio" step="1"><input type="submit" value="Agregar"> </form>
     </div>
-    <p id="test">Hola me llamo marco</p>
-
-    <div id="flexcont">
-
-    <div class="divdona"> <img class="imgdona" src="donablanca.png" alt="Dona Blanca">
-        <p class="txtdona">Dona con glaseado blanco y granillo de azúcar de colores<br><br>
-            <span class="precio">$900</span></p>
-    </div>  
-    
-    <div class="divdona"> <img class="imgdona" src="donanegra.png" alt="Dona Negra">
-        <p class="txtdona">Dona con glaseado de chocolate y granillo de azúcar de colores<br>
-            <span class="precio">$900</span></p>
+    <div class="divdona" id="dona2"> <img class="imgdona" src="https://gdurl.com/QlmA" alt="Dona Negra">
+      <form><input type="number" name="Precio2" class="stepprecio" step="1"><input type="submit" value="Agregar">
+      </form>
+      <p class="txtdona">Dona con glaseado de chocolate y granillo de azúcar de colores<br><br> <span
+          class="precio">$900</span></p>
     </div>
-</div>
-    <h1>Donas</h1>
+    <div class="divdona" id="dona3"> <img class="imgdona" src="https://gdurl.com/Z3mf" alt="Dona Rosa">
+      <p class="txtdona">Dona con glaseado de fresa y granillo de azúcar de colores<br><br> <span
+          class="precio">$900</span></p>
+      <form><input type="number" name="Precio3" class="stepprecio" step="1"><input type="submit" value="Agregar">
+      </form>
+
+    </div>
+  </div>
+  <h1>Donas</h1>
+
 
 </body>
 
