--- a/CompletarDatosDePago.html
+++ b/CompletarDatosDePago.html
@@ -43,7 +43,7 @@
 			<form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
 				id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 		<div class="topnav">
-			<a  href="#inicio">Inicio</a>
+			<a  href="ProcederPago.html">Inicio</a>
 			<a href="yumdonas.html">Productos</a>
 			<a class="active" href="ProcederPago.html">Orden en linea</a>
 			<a href="#mcontacto">Contacto</a>
