--- a/menuprods.html
+++ b/menuprods.html
@@ -76,9 +76,9 @@
 </div> 
 <div id="fcont">
 
-<div id="minicio">
+ <div id="minicio">
   <img src= "https://gdurl.com/Htxk" width="1334" alt="imagen que muestra las promociones" >
-  <a href=""><div id ="contenedorpastel">
+  <a href="yumpasteles.html"><div id ="contenedorpastel">
   <img src= "https://gdurl.com/a3cu" width="380" alt="imagen que reindica a menu pasteles" >
   <h1 class="headermenu">Pasteles</h1>
   </div>
@@ -88,10 +88,11 @@
 
    <h1 class="headermenu">Pays</h1>
   </div>
-  <div id="contenedordonas">
+  <a href="yumdonas.html"><div id="contenedordonas">
    <img src= "https://gdurl.com/Z3mf" width="380" alt="imagen que reindica a menu donas" >
    <h1 class="headermenu">Donas</h1>
   </div>
+  </a>
 </div>
 </div>
 </body>
