--- a/yumdonas.html
+++ b/yumdonas.html
@@ -165,7 +165,7 @@
 
 
   <div id="flexcont">
-    <div class="divdona"> <img class="imgdona" src="https://gdurl.com/to1h" alt="Dona Blanca">
+    <div class="divdona"> <a href="detalledona.html"><img class="imgdona" src="https://gdurl.com/to1h" alt="Dona Blanca"></a>
       <p class="txtdona">Dona con glaseado blanco y granillo de azúcar de colores<br><br> <span
           class="precio">$900</span></p>
       <form><input type="number" name="Precio" class="stepprecio" step="1"><input type="submit" value="Agregar"> </form>
