--- a/yummy3.html
+++ b/yummy3.html
@@ -4,39 +4,7 @@
 		<meta charset="utf-8">
     <base href="file:/D:/Yummyimg/">
       <style>
-  /* Add a black background color to the top navigation */
-.topnav {
-  background-color: #ff6961;
-  overflow: hidden;
-  text-align: center;
-  position: absolute;
-  top:110px;
 
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 13px 74px;
-  text-decoration: none;
-  font-size: 17px;
-
-
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #ddd;
-  color: black;
-  border: 1px ridge black;
-  text-decoration: underline;
-}
   #divlogo {
 
     margin-left: -100px;
@@ -98,15 +66,8 @@
 
   <body>
     
-  <div id="divlogo">  <img id="logo" src= "logo.png"width="200"></div>
-   <div class="topnav">
-  <a class="active" href="#minicio">Inicio</a>
-  <a href="#mmenu">Menú</a>
-  <a href="#morden">Orden en línea</a>
-  <a href="#mcontacto">Contacto</a>
-  <a href="#quienes">Quiénes somos</a>
-  <a href="#mpersonalizados">Personalizados</a>
-</div> 
+  <div id="divlogo">  <img alt="logo" id="logo" src= "logo.png"width="200"></div>
+
 <p id="info1">Calle Pavo Real 15, 63082 Tepic</p><br>
 <p id="info2">01 311 122 9696</p><br>
 <p id="info3">Yummy Cake</p><br>
