--- a/yumpasteles.html
+++ b/yumpasteles.html
@@ -27,52 +27,7 @@
     }
 
     /* Add a black background color to the top navigation */
-    .topnav {
-      background-color: #ff6961;
-      overflow: hidden;
-      text-align: center;
-      position: absolute;
-      top: 13.5vh;
-    }
-
-    .topnav a {
-      float: left;
-      color: black;
-      text-align: center;
-      padding: 1.3vh 5.25vw;
-      text-decoration: none;
-      font-size: 1.23vw;
-    }
-
-    #inputbuscar {
-      width: 350%;
-      height: 4vh;
-
-    }
-
-    h1 {
-      position: absolute;
-      width: 100px;
-      margin-left: -50px;
-      left: 48%;
-      top: 17vh;
-      font-size: 3em;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    }
-
-
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    .topnav a.active {
-      background-color: #ddd;
-      color: black;
-      border: 1px ridge black;
-      text-decoration: underline;
-    }
-
+    
     #divlogo {
       position: absolute;
       left: 1.2vw;
@@ -144,6 +99,28 @@
 </head>
 
 <body>
+    <div class='menu'>
+        <span class='toggle'>
+          <i></i>
+          <i></i>
+          <i></i>
+        </span>
+        <div class='menuContent '>
+          <ul>
+          <li><a href="menuprods.html">Inicio</a></li>
+          <li>  <a class="active" href="yumdonas.html">Productos</a>
+          </li>
+          <li>  <a href="ProcederPago.html">Orden en línea</a>
+          </li>
+          <li>  <a href="#mcontacto">Contacto</a>
+          </li>
+          <li>  <a href="pantalla_nosotros.html">Quiénes somos</a>
+          </li>
+          <li> <a href="yumpasteles.html">Personalizados</a>
+          </li>
+          </ul>
+        </div>
+        </div>
   <div id="divlogo"> <img id="logo" src="https://gdurl.com/rUCA" alt="YUMMY CAKE"></div>
 
   <div id="iconosredesx"><a href="https://www.facebook.com"><img alt="FB" class="iconosredes" src=https://gdurl.com/6U48></a><a
@@ -154,14 +131,7 @@
   <form id="frmbuscar"><input id="inputbuscar" type="text" placeholder="Buscar..." name="busqueda"><input
       id="submitbuscar" type="image" src="https://gdurl.com/tt9q" alt="Ir"></form>
 
-  <div class="topnav">
-    <a  href="menuprods.html">Inicio</a>
-    <a class="active" href="yumdonas.html">Productos</a>
-    <a href="ProcederPago.html">Orden en línea</a>
-    <a href="#mcontacto">Contacto</a>
-    <a href="pantalla_nosotros.html">Quiénes somos</a>
-    <a href="yumpasteles.html">Personalizados</a>
-  </div>
+   
 
 
   <div id="flexcont">
