--- a/index.html
+++ b/index.html
@@ -21,21 +21,14 @@
     </style>
   </head>
   <body>
-      <h2>Índice etapa de desarrollo</h2>
-    <p>Este índice sirve como herramienta para demostrar las pantallas individuales, ya que en esta etapa puede haber algunos errores en el direccionamiento a cada página. <br>
-        El siguiente enlace lo direccionará a la pantalla principal, y más abajo se encuentran todas las demás pantallas.
+      <h2>Página migrada</h2>
+    <p>Esta página web se ha movido a otro host, ya que Github Pages no soporta las acciones del lado del servidor, tales como las de PHP, que son necesarias para el objetivo de nuestra página.
+      La página dejará de ser actualizada en este hosting, por eso mismo le pedimos que por favor ingrese al nuevo host presentado más abajo.
        <br> Por su comprensión, gracias.
        <br> - Yummy Cake
     </p>
-    <a href="menuprods.html"><h1 id="fuerzaimparablevsobjetoinamovible">Ir a la página principal</h1></a><br>
-    <a href="CompletarDatosDeEntrega.html">Completar datos de entrega</a><br>
-    <a href="CompletarDatosDePago.html">Completar datos de pago</a><br>
-    <a href="detalledona.html">Detalles del producto</a><br>
-    <a href="ordenenlinea.html">Método de pago #1</a><br>
-    <a href="pantalla_nosotros.html">Quiénes somos</a><br>
-    <a href="ProcederPago.html">Proceder al pago</a><br>
-    <a href="yumdonas.html">Productos - Donas</a><br>
-    <a href="yumpasteles.html">Productos - Pasteles</a><br>
+    <a href="https://bit.ly/2WaLFln"><h1 id="fuerzaimparablevsobjetoinamovible">Ir a nuevo hosting</h1></a><br>
+
 
   </body>
 </html>
